--- a/solutions/2015-01-15_monman53_ans.md
+++ b/solutions/2015-01-15_monman53_ans.md
@@ -1,5 +1,5 @@
 ## 解答
-sugoiHaskell/problems/2015-01-15_monman53.md
+[問題ページ](../problems/2015-01-15_monman53.md)
 
 二通りに書いてみましたが、どっちも特に簡潔にはなってなかった(完)
 
