--- a/summary/2015-01-15_3.md
+++ b/summary/2015-01-15_3.md
@@ -1,8 +1,8 @@
-3. 関数の構文
+#3. 関数の構文
 この章ではHaskellの関数を書くための構文を見ていく。
 値を手軽に分解する方法、大きなif/elseの連鎖を避ける方法、計算の中間データを一時的に保存/活用する方法を見ていく。
 
-3.1 パターンマッチ
+##3.1 パターンマッチ
 パターンマッチはある種のデータが従うべきパターンを指定し、そのパターンに従ってデータを分解するために使う。
 例えば渡された数が7かどうか調べたい。
 
@@ -23,7 +23,7 @@ factorial n = n * factorial (n - 1)
 パターンが網羅的でないとnon-exhaustive patternsエラーとなる。
 最後に全てに合致するパターンを入れておくとプログラムのクラッシュを防げて安全。
 
-・タプルのパターンマッチ
+###・タプルのパターンマッチ
 2つの2次元空間のベクトル(ペア)を受け取り、足し合わせる関数を書きたい。
 パターンマッチを知らなければ
 addVectors :: (Double,Double)->(Double,Double)->(Double,Double)
@@ -41,7 +41,7 @@ first :: (a,b,c) -> c
 first (_, _, z) = z
 のようにすればよい。(_は予約語なので、通常の変数としては使えない)
 
-・リストのパターンマッチとリスト内包表記
+###・リストのパターンマッチとリスト内包表記
 リスト内包表記のパターンマッチでは失敗したら次の要素に進み、失敗した要素は破棄される
 ghci > let xs = [(1,3),(4,3),(2,4),(5,3),(5,6),(3,1)]
 ghci > [(x*100)+3 | (x,3) <- xs]
@@ -60,7 +60,7 @@ error関数は文字列を引数に鳥、その文字列でランタイムエラ
 []で書けるのは要素数が指定されているものだけ。
 パターン部分では++演算子をつかうことができない。
 
-・asパターン
+###・asパターン
 asパターンは、値をパターンに分解しつつ、パターンマッチの対象になった値自体も参照したいときに使う。
 asパターンを作るには普通のパターン前に名前と@を追加する。
 例えば
@@ -70,7 +70,7 @@ firstLetter all@(x:xs) = "The first letter of " ++ all ++ " is " ++ [x]
 ghci > firstLetter "apple"
 "The first letter of apple is a"
 
-3.2 場合分けして、きっちりガード！
+##3.2 場合分けして、きっちりガード！
 パターンマッチでは引数の構造で場合分けした。
 引数の値が満たす性質で場合分けしたいときはガードを用いる。
 複数の条件があるときはif文よりガードのほうが可読性が高く、パターンマッチとの相性もよい。
@@ -87,7 +87,7 @@ bmiTell weight height
 全てFalseに評価されてotherwiseも無かった場合、次のパターンに移る。適切なパターンがなければエラー。
 `(バッククオート、shift+@)による中置記法は関数呼び出しだけでなく関数定義でも使える。
 
-3.3 where?!
+##3.3 where?!
 bmiTell weight height
     |bmi <= 18.5 = "a"
     |weight / height^2 <= 25.0 = "b"
@@ -99,7 +99,7 @@ whereの後の変数や関数は複数でもよいが、インデントがずれ
 whereの中で定義した変数はその関数内でしか使えないが、グローバルに使いたいときは外に出す必要がある。
 whereの束縛の中でもパターンマッチを使うことができる。
 
-3.4 let it be
+##3.4 let it be
 let式の中でもパターンマッチを使うことが出来る。
 cylinder :: Double -> Double -> Double
 cylinder r h =
@@ -124,7 +124,7 @@ ghci > (let (a, b, c) = (1, 2, 3) in a+b+c) * 100
 let式はリスト内包表記の中ｄえも使える。詳しくは後述。
 let式は局所的なので、関数全体をスコープに取る変数を定義したければwhereの方が適当
 
-・リスト内包表記でのlet
+###・リスト内包表記でのlet
 例えば体重と新著のペアのリストを計算する関数をwhereとletで書くと
 
 calcBmis :: [(Double, Double)] -> [Double]
@@ -136,14 +136,14 @@ calcBmis xs = [bmi | (w, h) <- xs, let bmi = w / h ^ 2]
 
 (w, h) <- xsの部分はジェネレータと呼ばれる。letよりも前に定義されているので、変数bmiはジェネレータから参照不可。
 
-・GHCiでのlet
+###・GHCiでのlet
 GHCiで直接関数や定数を定義するときはinを省略できる。このときこの定義はセッション全体から参照できる。
 ghci > let zoot x y z = x * y + z
 ghci > zoot 3 4 2
 14
 inを省略しなかった場合は参照できない。
 
-3.5 case式
+##3.5 case式
 case式は変数の指定した値に対するコードブロックを評価できる。
 ようするにどこでもパターンマッチできる。
 head' :: [a] -> a
